RESOLVED FIXED185865
Fix build without MathML
https://bugs.webkit.org/show_bug.cgi?id=185865
Summary Fix build without MathML
Olivier Blin
Reported 2018-05-22 05:42:24 PDT
Build without ENABLE(MATHML) fails. Regression(r226654): [RenderTreeBuilder] Move MathML addChild logic to RenderTreeBuilder https://bugs.webkit.org/show_bug.cgi?id=181443 Regression(r229694): Put the DOM in IsoHeaps https://bugs.webkit.org/show_bug.cgi?id=183546
Attachments
Patch (6.14 KB, patch)
2018-05-22 05:43 PDT, Olivier Blin
no flags
Olivier Blin
Comment 1 2018-05-22 05:43:53 PDT
Olivier Blin
Comment 2 2018-05-22 05:54:22 PDT
You may want to know if it is still worth maintaining this MathML build flag. On an ARMv7 platform, disabling MathML allows to save 242,148 bytes over a library of 27,063,644 bytes, that's about 1% of the size.
Michael Catanzaro
Comment 3 2018-05-22 07:19:45 PDT
Comment on attachment 340976 [details] Patch Sigh, I think it's OK even without exposing the MATHML build flag for WPE, because none of the code is platform-specific.
Michael Catanzaro
Comment 4 2018-05-22 07:20:41 PDT
(In reply to Olivier Blin from comment #2) > You may want to know if it is still worth maintaining this MathML build flag. > > On an ARMv7 platform, disabling MathML allows to save 242,148 bytes over a > library of 27,063,644 bytes, that's about 1% of the size. And yes, if you didn't have this analysis to prove it's significant, we would have probably started to talk about that.
WebKit Commit Bot
Comment 5 2018-05-22 07:46:47 PDT
Comment on attachment 340976 [details] Patch Clearing flags on attachment: 340976 Committed r232064: <https://trac.webkit.org/changeset/232064>
WebKit Commit Bot
Comment 6 2018-05-22 07:46:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-05-22 07:47:15 PDT
Note You need to log in before you can comment on or make changes to this bug.