Fix build without MathML https://bugs.webkit.org/show_bug.cgi?id=185865

Patch by Olivier Blin <olivier.blin@softathome.com> on 2018-05-22
Reviewed by Frédéric Wang.

Regression(r226654): [RenderTreeBuilder] Move MathML addChild logic to RenderTreeBuilder
https://bugs.webkit.org/show_bug.cgi?id=181443

Regression(r229694): Put the DOM in IsoHeaps
https://bugs.webkit.org/show_bug.cgi?id=183546

No new tests, build fix.

* mathml/MathMLUnknownElement.cpp:
* mathml/MathMLUnknownElement.h:
* rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::RenderTreeBuilder):
(WebCore::RenderTreeBuilder::attach):
* rendering/updating/RenderTreeBuilder.h:
* rendering/updating/RenderTreeBuilderMathML.cpp:
* rendering/updating/RenderTreeBuilderMathML.h:

Canonical link: https://commits.webkit.org/201315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232064 268f45cc-cd09-0410-ab3c-d52691b4dbfc